<resources>
    <string name="app_name">To-Do App</string>
    <string name="action_settings">Настройки</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_main_activity">Органайзер</string>

    <string name="tasks">Задачи</string>
    <string name="premium">Платена версия</string>
    <string name="new_task">Нова задача</string>
    <string name="name">Име</string>
    <string name="description">Описание</string>
    <string name="priority">Приоритет</string>
    <string name="start_date">Начален ден</string>
    <string name="start_time">Начален час</string>
    <string name="end_date">Краен ден</string>
    <string name="end_time">Краен час</string>
    <string name="notifications">Нотификации</string>
    <string name="save">Запази</string>

    <string name="pay_premium">Плати $3</string>
    <string name="premium_description">
        Плати $3, за да се отървеш от рекламите, които те разсейват!
    </string>
    <string name="title_activity_tasks_list">TasksListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>